Fix deck index on mobile

--- a/client/src/Pages/Decks.sass
+++ b/client/src/Pages/Decks.sass
@@ -6,6 +6,7 @@
 
 .brb
   display: flex
+  flex-wrap: wrap
   &-block
     margin-left: 15px
     &:first-child
